force/src/objects/MPM4_BASE__Milestone1_Task__c.object
<CustomObject>
    <description>Passage Technology - Milestones PM+ Free Edition - An activity that has hours, budget, and is assigned to a User.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Actual_Duration__c</fullName>
        <formula>IF ( ISBLANK(MPM4_BASE__Actual_Finish_Date__c),  MPM4_BASE__Due_Date__c - IF(ISBLANK( MPM4_BASE__Actual_Start_Date__c),  MPM4_BASE__Start_Date__c,  MPM4_BASE__Actual_Start_Date__c ) + 1, MPM4_BASE__Actual_Finish_Date__c  - IF(ISBLANK( MPM4_BASE__Actual_Start_Date__c),  MPM4_BASE__Start_Date__c,  MPM4_BASE__Actual_Start_Date__c )+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Actual_Finish_Date__c</fullName>
        <inlineHelpText>When did work actually finish?</inlineHelpText>
        <label>Actual Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Actual_Start_Date__c</fullName>
        <inlineHelpText>When did work actually start?</inlineHelpText>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The user responsible for completing the task. Defaults to current user if left blank.</inlineHelpText>
        <label>zDeprecated</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Tasks_Assigned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Blocked_Reason__c</fullName>
        <inlineHelpText>If blocked, why?</inlineHelpText>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this task blocked for some reason?</inlineHelpText>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Class__c</fullName>
        <inlineHelpText>Classify this task as appropriate for your use.</inlineHelpText>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The status of this task. A task is either in-complete or complete.</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__CreatedByTask__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreatedByTask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Daily_Resource_Allocation__c</fullName>
        <description>The percentage of a resources work day allocated to working on this task.</description>
        <label>Daily Resource Allocation Percentage</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Days_Late_Formula__c</fullName>
        <formula>Today() -  MPM4_BASE__Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Late Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Days_Late__c</fullName>
        <inlineHelpText>How many days late is this task?</inlineHelpText>
        <label>Days Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Description__c</fullName>
        <inlineHelpText>The general description of the task. For example, what is the purpose of the task.</inlineHelpText>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Due_Date__c</fullName>
        <inlineHelpText>The date this task is due to be completed. Defaults to milestone due date if left blank.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Duration_In_Minutes__c</fullName>
        <defaultValue>60</defaultValue>
        <description>Contains the event length, in minutes.</description>
        <inlineHelpText>Contains the event length, in minutes.</inlineHelpText>
        <label>Duration In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Email_GUID__c</fullName>
        <description>This field is used to track Email for a reply to email chain.</description>
        <externalId>true</externalId>
        <label>Email GUID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Email_Template_ID__c</fullName>
        <label>Email Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__End_Date_Time__c</fullName>
        <inlineHelpText>Changing the end time will update your calendar as well as your project tasks due date.</inlineHelpText>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Estimated_Expense__c</fullName>
        <inlineHelpText>The estimated amount of expenses which will be incurred during the task.</inlineHelpText>
        <label>Estimated Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Estimated_Hours__c</fullName>
        <inlineHelpText>The estimated time to complete the task.</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Exclude_Weekend_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Weekend Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Expense_Balance__c</fullName>
        <formula>MPM4_BASE__Estimated_Expense__c - MPM4_BASE__Total_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as estimated expense - total expense</inlineHelpText>
        <label>Expense Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Gantt_Color__c</fullName>
        <label>Gantt Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Hours_Balance__c</fullName>
        <formula>MPM4_BASE__Estimated_Hours__c - MPM4_BASE__Total_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as estimated hours - total hours</inlineHelpText>
        <label>Hours Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__ImportID__c</fullName>
        <label>Import ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Index_Helper__c</fullName>
        <formula>IF( ISNULL(MPM4_BASE__Resource__r.MPM4_BASE__User__c) , 
MPM4_BASE__Resource__r.MPM4_BASE__Contact__r.FirstName &amp; &apos; &apos; &amp; MPM4_BASE__Resource__r.MPM4_BASE__Contact__r.LastName &amp; &apos; &apos; &amp; MPM4_BASE__Project_Milestone__r.MPM4_BASE__Project__r.Name &amp; &apos; &apos; &amp; MPM4_BASE__Project_Milestone__r.Name &amp; &apos; complete:&apos; &amp; IF(MPM4_BASE__Complete__c, &apos;yes&apos;, &apos;no&apos;) &amp; &apos; &apos; &amp; Name 
, 
MPM4_BASE__Resource__r.MPM4_BASE__User__r.FirstName &amp; &apos; &apos; &amp; MPM4_BASE__Resource__r.MPM4_BASE__User__r.LastName &amp; &apos; &apos; &amp; MPM4_BASE__Project_Milestone__r.MPM4_BASE__Project__r.Name &amp; &apos; &apos; &amp; MPM4_BASE__Project_Milestone__r.Name &amp; &apos; complete:&apos; &amp; IF(MPM4_BASE__Complete__c, &apos;yes&apos;, &apos;no&apos;) &amp; &apos; &apos; &amp; Name
)</formula>
        <label>Index Helper</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Index__c</fullName>
        <externalId>true</externalId>
        <label>Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Last_Email_Received__c</fullName>
        <description>Date Time the last email was sent to this task.</description>
        <inlineHelpText>The date the last email was attached to this task. A task can be created via an email, and additional emails can be attached to the task in the notes section.</inlineHelpText>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Milestone_Deadline__c</fullName>
        <formula>MPM4_BASE__Project_Milestone__r.MPM4_BASE__Deadline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Milestone_Grandparent__c</fullName>
        <formula>if (
 MPM4_BASE__Project_Milestone__r.MPM4_BASE__Parent_Milestone__c != null, 
 MPM4_BASE__Project_Milestone__r.MPM4_BASE__Parent_Milestone__r.Name , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Grandparent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Milestone_Import_ID__c</fullName>
        <label>Milestone Import ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Milestone_Kickoff__c</fullName>
        <formula>MPM4_BASE__Project_Milestone__r.MPM4_BASE__Kickoff__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__MyTask__c</fullName>
        <formula>IF(AND(MPM4_BASE__Resource__c != null, MPM4_BASE__Resource__r.MPM4_BASE__User__c != null ), MPM4_BASE__Resource__r.MPM4_BASE__User__c == $User.Id, false)</formula>
        <label>My Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Notification_Email_Address__c</fullName>
        <label>Notification Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Overall_Status__c</fullName>
        <formula>if ( MPM4_BASE__Complete__c == true, &apos;Complete&apos;,
  if ( and( MPM4_BASE__Days_Late_Formula__c &gt; 0,  MPM4_BASE__Blocked__c  ),
    if(Len( Text(MPM4_BASE__Task_Stage__c))&gt;0 , &apos;Late &amp; Blocked &apos; &amp; Text(MPM4_BASE__Task_Stage__c), &apos;Late &amp; Blocked&apos;),
    if (MPM4_BASE__Days_Late_Formula__c &gt; 0,  
      if(Len( Text(MPM4_BASE__Task_Stage__c))&gt;0, &apos;Late &apos; &amp; text(MPM4_BASE__Task_Stage__c), &apos;Late&apos;),
      if(MPM4_BASE__Blocked__c == true, 
        if(Len( Text(MPM4_BASE__Task_Stage__c))&gt;0, &apos;Blocked &apos; &amp; text(MPM4_BASE__Task_Stage__c), &apos;Blocked&apos;), 
        if(Len( Text(MPM4_BASE__Task_Stage__c))&gt;0, &apos;Open &apos; &amp; Text(MPM4_BASE__Task_Stage__c), &apos;Open&apos;) 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated field indicating if the task is complete, open, late, blocked or late and blocked.</inlineHelpText>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__OwnerId__c</fullName>
        <formula>MPM4_BASE__Project_Milestone__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Percent_Complete__c</fullName>
        <description>A manually maintained field for what percentage complete a task is.</description>
        <label>Percent Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Planned_Duration__c</fullName>
        <formula>(MPM4_BASE__Due_Date__c - MPM4_BASE__Start_Date__c) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Predecessor_Task_Import_Id__c</fullName>
        <label>Predecessor_Task_Import_Id__c</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Predecessor_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The predecessor task for this task if applicable.</inlineHelpText>
        <label>Predecessor Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Milestone__c</field>
                <operation>equals</operation>
                <valueField>$Source.MPM4_BASE__Project_Milestone__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>MPM4_BASE__Milestone1_Task__c</referenceTo>
        <relationshipLabel>Successor Tasks</relationshipLabel>
        <relationshipName>Successor_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Priority__c</fullName>
        <inlineHelpText>This is the priority of the task. 0,1,2,3 or 4.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPM4_BASE__ProjectId__c</fullName>
        <formula>MPM4_BASE__Project_Milestone__r.MPM4_BASE__Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__ProjectStatus__c</fullName>
        <formula>TEXT(MPM4_BASE__Project_Milestone__r.MPM4_BASE__Project__r.MPM4_BASE__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Lookup_Name__c</fullName>
        <formula>MPM4_BASE__Project_Lookup__r.Name</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Milestone__c</fullName>
        <inlineHelpText>The milestone that this task is assigned to.</inlineHelpText>
        <label>Milestone</label>
        <referenceTo>MPM4_BASE__Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Owner_Email__c</fullName>
        <label>Project Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; MPM4_BASE__Project_Milestone__r.MPM4_BASE__Project__c, MPM4_BASE__Project_Milestone__r.MPM4_BASE__Project__r.Name,&apos;_self&apos;)</formula>
        <inlineHelpText>A link to the Project which this task is included in via its milestone.</inlineHelpText>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Reminder_Time__c</fullName>
        <label>Reminder Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Remote_Object_Context__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Object Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>MPM4_BASE__Milestone1_Resource__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Short_ID__c</fullName>
        <inlineHelpText>Unique number for each task and across all projects.</inlineHelpText>
        <label>Short ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Start_Date_Time__c</fullName>
        <inlineHelpText>In order to schedule an Event on your Salesforce Calendar, this must be populated. Changing the start time will update your calendar as well as your project task&apos;s start date.</inlineHelpText>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>When should this task start by?</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Sync_To__c</fullName>
        <inlineHelpText>Setting this field to &apos;Salesforce Event&apos; and populating the Start Time will automatically create a Salesforce Event on your Salesforce Calendar as well as any calendars that you sync with Salesforce using third party apps.</inlineHelpText>
        <label>Sync To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Event</fullName>
                </value>
                <value>
                    <fullName>Salesforce Task</fullName>
                    <default>true</default>
                    <label>Salesforce Task</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Task_Number__c</fullName>
        <inlineHelpText>Unique number for each task and across all projects.</inlineHelpText>
        <label>Task Short ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Task_Stage__c</fullName>
        <inlineHelpText>Where is this task on the road to completion?</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Expense__c</fullName>
        <inlineHelpText>Calculated from all child expense records</inlineHelpText>
        <label>Total Expense</label>
        <summarizedField>MPM4_BASE__Milestone1_Expense__c.MPM4_BASE__Amount__c</summarizedField>
        <summaryForeignKey>MPM4_BASE__Milestone1_Expense__c.MPM4_BASE__Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Hours__c</fullName>
        <inlineHelpText>Calculated from all child time records</inlineHelpText>
        <label>Total Hours</label>
        <summarizedField>MPM4_BASE__Milestone1_Time__c.MPM4_BASE__Hours__c</summarizedField>
        <summaryForeignKey>MPM4_BASE__Milestone1_Time__c.MPM4_BASE__Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Weekday_Duration__c</fullName>
        <label>Weekday Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__hide_delete_checkbox_on_mpp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Delete Checkbox on MPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>MPM4_BASE__My_Tasks</fullName>
        <columns>NAME</columns>
        <columns>MPM4_BASE__Project_Lookup__c</columns>
        <columns>MPM4_BASE__Start_Date__c</columns>
        <columns>MPM4_BASE__Due_Date__c</columns>
        <columns>MPM4_BASE__Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MPM4_BASE__MyTask__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Tasks</label>
    </listViews>
    <listViews>
        <fullName>Optics_Open_Tasks</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>MPM4_BASE__Task_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>MPM4_BASE__Overall_Status__c</columns>
        <columns>MPM4_BASE__OwnerId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MPM4_BASE__Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>MPM4_BASE__OwnerId__c</field>
            <operation>equals</operation>
            <value>DEBBIE NEVERVE</value>
        </filters>
        <label>Optics Open Tasks</label>
        <sharedTo>
            <group>GAAT_Queue</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Project Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MPM4_BASE__CannotBeBlockedIfComplete</fullName>
        <active>true</active>
        <errorConditionFormula>if (And ( MPM4_BASE__Blocked__c == true, MPM4_BASE__Complete__c == true), true, false)</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Blocked__c</errorDisplayField>
        <errorMessage>You cannot mark a completed task as blocked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__CannotBeCompleteIfBlocked</fullName>
        <active>true</active>
        <errorConditionFormula>if (and ( MPM4_BASE__Complete__c == true,  MPM4_BASE__Blocked__c ==true), true, false)</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Complete__c</errorDisplayField>
        <errorMessage>You cannot complete a task marked as blocked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Due_Date_Greater_Than_Milestone_Deadline</fullName>
        <active>false</active>
        <errorConditionFormula>MPM4_BASE__Due_Date__c &gt;  MPM4_BASE__Project_Milestone__r.MPM4_BASE__Deadline__c</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Due_Date__c</errorDisplayField>
        <errorMessage>Due Date should be smaller than Milestone Deadline</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Due_Date_Smaller_Than_Milestone_Kickoff</fullName>
        <active>false</active>
        <errorConditionFormula>MPM4_BASE__Due_Date__c &lt;  MPM4_BASE__Project_Milestone__r.MPM4_BASE__Kickoff__c</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Due_Date__c</errorDisplayField>
        <errorMessage>Due Date should be greater than Milestone Kickoff Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Must_be_blank_if_not_blocked</fullName>
        <active>true</active>
        <errorConditionFormula>IF( and(MPM4_BASE__Blocked__c == false, len( MPM4_BASE__Blocked_Reason__c ) &gt; 0) , True, False)</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Blocked_Reason__c</errorDisplayField>
        <errorMessage>Must be blank if &quot;blocked&quot; is not checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Must_not_be_blank_if_blocked</fullName>
        <active>true</active>
        <errorConditionFormula>IF( and(MPM4_BASE__Blocked__c == true, len( MPM4_BASE__Blocked_Reason__c ) == 0) , True, False)</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Blocked_Reason__c</errorDisplayField>
        <errorMessage>If this task is blocked you must enter a reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Predecessor_Task_of_Successor_Task</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(MPM4_BASE__Predecessor_Task__r.MPM4_BASE__Predecessor_Task__c)), Id  =  MPM4_BASE__Predecessor_Task__r.MPM4_BASE__Predecessor_Task__c)</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Predecessor_Task__c</errorDisplayField>
        <errorMessage>Cannot have a predecessor task that is the successor of the task.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Start_Date_More_Than_Due_Date</fullName>
        <active>false</active>
        <errorConditionFormula>if (and(!isblank(MPM4_BASE__Start_Date__c), !isblank(MPM4_BASE__Due_Date__c)), true, false)</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Due_Date__c</errorDisplayField>
        <errorMessage>Due Date should be greater than Start Date</errorMessage>
    </validationRules>
</CustomObject>